<?xml version="1.0"?>
<package format="2">
  <name>raspicam_image_proc</name>
  <version>0.0.0</version>
  <description>The raspicam_image_proc package</description>
  <maintainer email="tri.bm@student.vgu.edu.vn">youbot</maintainer>
  <license>Open Source</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
